--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@angular/platform-browser": "^14.2.12",
     "@angular/platform-browser-dynamic": "^14.2.12",
     "@angular/router": "^14.2.12",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@apollo/client": "^3.7.10",
+    "apollo-angular": "^4.2.1",
+    "globby": "^13.1.3",
+    "graphql": "^16.6.0",
+    "rxjs": "^7.5.7",
+    "tslib": "^2.5.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.10",
