--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "globby": "^13.1.3",
     "graphql": "^16.6.0",
     "rxjs": "^7.5.7",
-    "tslib": "^2.5.0"
+    "tslib": "^2.5.0",
+    "sweetalert2": "^9.10.9"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.10",
